<resources>
    <string name="app_name">DreamDecoderApp</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="showlogo">ShowLogo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="Email">Email</string>
    <string name="todo">TODO</string>
    <string name="Login">Login</string>
    <string name="submit">Submit</string>
    <string name="ready_to_analyze_your_dreams">Ready to analyze your dreams?</string>
    <string name="back">back</string>
    <string name="analyze">analyze</string>
    <string name="type_your_dream_here">type_your_dream_here</string>
    <string name="enter_your_dream_here">enter_your_dream_here</string>
    <string name="enter_your_dreamhere">Enter Your Dream Here</string>
    <string name="Analyze">Analyze</string>
    <string name="dreampatterntracking">Dream Pattern Tracking</string>
    <string name="dream_journal">Dream Journal</string>
    <string name="dream_description">Dream Description</string>
    <string name="dream_date">Dream Date</string>
    <string name="dream_emotions">dream_emotions</string>
    <string name="dream_symbols">dream_symbols</string>
    <string name="save_dream">Save Dream</string>
    <string name="pattern_recognition">pattern_recognition</string>
    <string name="pattern_analysis_placeholder" />
    <string name="dream_descriptions">Dream Description</string>
    <string name="dream_interpretation_will_be_displayed_here">Dream interpretation will be displayed here.</string>
    <string name="Back">Back</string>
    <string-array name="options">
        <item>Dream Interpretation </item>
        <item>Journaling </item>
    </string-array>

</resources>