<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/purple">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="238dp"
        android:layout_height="65dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="261dp"
        android:layout_marginEnd="87dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signimg" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/InputEmail"
        android:layout_width="243dp"
        android:layout_height="63dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="85dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Password"
        android:layout_width="243dp"
        android:layout_height="76dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="85dp"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirmation"
        android:layout_width="243dp"
        android:layout_height="76dp"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="167dp"
        android:hint="@string/confirm_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="94dp"
        android:text="@string/submit"
        android:onClick="submitSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation" />


</androidx.constraintlayout.widget.ConstraintLayout>