<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/purple">

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="255dp"
        android:layout_height="68dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="274dp"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PutEmail"
        tools:visibility="visible"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/PutEmail"
        android:layout_width="255dp"
        android:layout_height="67dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Email"
        app:layout_constraintBottom_toTopOf="@+id/TextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="38dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/PutEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginimg" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="197dp"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>